--- a/server/package.json
+++ b/server/package.json
@@ -21,23 +21,24 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cripto": "^1.1.4",
-    "cron": "^2.1.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-validator": "^6.14.1",
-    "fluent-ffmpeg": "^2.1.2",
     "isomorphic-unfetch": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.4",
-    "node-cache": "^5.1.2",
     "node-fetch": "^3.2.10",
     "pg": "^8.0.3",
     "pg-pool": "^3.5.1",
-    "torrent-stream": "^1.2.1",
     "uuid": "^8.3.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "^2.0.15"
   }
 }
