--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,12 @@
     "chalk": "^4.1.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "cripto": "^1.1.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-rate-limit": "^6.7.0",
     "express-validator": "^6.14.1",
     "isomorphic-unfetch": "^3.1.0",
+    "joi": "^17.8.3",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^3.2.10",
     "pg": "^8.0.3",
