--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "description": "Hypertube web app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules ./node_modules/.bin/jest --detectOpenHandles --forceExit",
     "start": "nodemon index.js",
     "dev": "nodemon index.js",
     "setup": "nodemon setup.js"
@@ -15,22 +15,19 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
-    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "chalk": "^4.1.2",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-rate-limit": "^6.7.0",
     "express-validator": "^6.14.1",
-    "isomorphic-unfetch": "^3.1.0",
+    "jest": "^29.5.0",
     "joi": "^17.8.3",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^3.2.10",
     "pg": "^8.0.3",
     "pg-pool": "^3.5.1",
-    "uuid": "^8.3.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
@@ -40,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.3.3"
   }
 }
